# Count-polygons-AAL

./: CMakeLists.txt  Graph.cpp  Graph.h  Graph_DFS.cpp  Graph_DFS.h  Graph_Tarjan.cpp  Graph_Tarjan.h  Point.cpp  Point.h  README.md  Segment.cpp  Segment.h  VectorHash.h  main.cpp  makefile  options_parser.h  points.txt  test.txt  utilities.h
